<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_FixtureMeasurementResultExt" Id="{5e212e44-929c-4067-b5a0-382478ee10cf}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_FixtureMeasurementResultExt :
(
	FIXTURE_MEASUREMENT_RESULT_NONE			:= 0,
	FIXTURE_MEASUREMENT_RESULT_GOOD			:= 10,
	FIXTURE_MEASUREMENT_RESULT_THD 			:= 20,
	FIXTURE_MEASUREMENT_RESULT_PHASE		:= 30,
	FIXTURE_MEASUREMENT_RESULT_SSPL			:= 40,
	FIXTURE_MEASUREMENT_RESULT_RUBBING		:= 50,
	FIXTURE_MEASUREMENT_RESULT_IMP			:= 60,
	FIXTURE_MEASUREMENT_RESULT_HFA			:= 70,
	FIXTURE_MEASUREMENT_RESULT_SPL			:= 80,
	FIXTURE_MEASUREMENT_RESULT_CONNECT		:= 90,
	FIXTURE_MEASUREMENT_RESULT_REJECT_OTHER	:= 100,
	FIXTURE_MEASUREMENT_RESULT_REWORK		:= 110
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>