<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_FixtureState" Id="{84f983c5-c751-4248-a642-e58157746cf4}">
    <Declaration><![CDATA[{attribute 'strict'}
TYPE E_FixtureState :
(
	FIXTURE_EXTENSION_IDLE								:= 0,	(*  *)
	FIXTURE_EXTENSION_COVER_ACTIVE	 					:= 10,	(*  *)
	FIXTURE_EXTENSION_COVER_ACTIVE_DONE					:= 20,	(*  *)
	FIXTURE_EXTENSION_COVER_HOME						:= 30,	(*  *)
	FIXTURE_EXTENSION_COVER_HOME_DONE					:= 40,	(*  *)
	FIXTURE_EXTENSION_CLAMP_HOLD						:= 50,	(*  *)
	FIXTURE_EXTENSION_CLAMP_HOLD_DONE					:= 60,	(*  *)
	FIXTURE_EXTENSION_CLAMP_RELEASE						:= 70,	(*  *)
	FIXTURE_EXTENSION_CLAMP_RELEASE_DONE				:= 80,	(*  *)
	FIXTURE_EXTENSION_COVER_ACTIVE_AND_JIG_OPEN			:= 90,	(*  *)
	FIXTURE_EXTENSION_COVER_ACTIVE_AND_JIG_OPEN_DONE 	:= 100,	(*  *)
	FIXTURE_EXTENSION_COVER_HOME_AND_JIG_CLOSE			:= 110,	(*  *)
	FIXTURE_EXTENSION_COVER_HOME_AND_JIG_CLOSE_DONE		:= 120,	(*  *)
	FIXTURE_EXTENSION_LOAD_NORM							:= 130,	(*  *)
	FIXTURE_EXTENSION_LOAD_NORM_DONE					:= 140,	(*  *)
	FIXTURE_EXTENSION_GOLDEN_SAMPLE_MEASURE				:= 150,	(*	*)
	FIXTURE_EXTENSION_GOLDEN_SAMPLE_MEASURE_DONE		:= 160	(*  *)
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>